I hate writing docs 📖😔

--- a/docs/3.1 Syntax basics.md
+++ b/docs/3.1 Syntax basics.md
@@ -86,14 +86,35 @@ fn main
 
 # Implicit commas
 
-# Types
+One of the zhaba-script's interesting features is implicit commas. Implicit commas act like regular commas, but inserted implicitly into expressions between 2 tokens if this condition is met:
 
-## String
+Left token is `)`, literal (for example string literal or int literal) or identifier.
+Right token is `(`, literal (for example string literal or int literal) or identifier.
 
-## Int
+Some examples:
 
-## Bool
-
-# Input and output
+```zh
+a = 2   b = 3
+a = 2 , b = 3
+//    ^
+// on left there is `2` and on right there is `b`, so `,` is inserted
+// note that there is no implicit `,` between `b` and `=` because `=` is operator
+```
 
 # Using other files
+
+To use other files in your programs write `use` followed by `'filename path'`. If you want to use file at the same directory you can remove `''` and `.zh`. If there is no file with that name compiler will search in `std` directory for it.
+
+```zh
+use 'path/filename.zh'
+use filename
+```
+
+Examples:
+
+```zh
+use std
+use 'std.zh'
+use 'da/da'
+use 'da/da.zh'
+```
