Update 3.2 Semantic basics.md

--- a/docs/3.2 Semantic basics.md
+++ b/docs/3.2 Semantic basics.md
@@ -73,3 +73,11 @@ These expressions are concentered lval:
 All the others expressions are considered to be rval.
 
 Read more about rval and lval in C++ to understand this concept more [here](https://en.cppreference.com/w/cpp/language/value_category).
+
+## Type casting
+
+To cast one type to another use `as` operator and you can only cast types with the same size.
+
+```zh
+exp as TypeName
+```
